--- a/app/src/main/res/layout/main_item_list.xml
+++ b/app/src/main/res/layout/main_item_list.xml
@@ -2,11 +2,11 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="45dp"
+    android:layout_marginBottom="3dp"
     android:background="@color/white"
     android:elevation="2dp"
     app:cardCornerRadius="2dp"
-    android:layout_marginBottom="3dp"
     app:cardMaxElevation="5dp">
 
     <RelativeLayout
@@ -14,39 +14,55 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_onclick">
 
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:textColor="@color/black"
-            android:ellipsize="marquee"
-            android:fontFamily="serif"
-            android:gravity="start"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:text="@string/app_name"
-            android:textSize="16sp" />
+            android:layout_centerVertical="true"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/subTitle"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="30dp"
+                android:ellipsize="marquee"
+                android:fontFamily="serif"
+                android:gravity="start"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="@string/app_name"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/subTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="serif"
+                android:gravity="start"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/app_name"
+                android:textColor="#686868"
+                android:textSize="13sp"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="serif"
-            android:textColor="#686868"
-            android:gravity="start"
-            android:text="@string/app_name"
-            android:textSize="13sp"
-            android:textStyle="italic" />
+            android:src="@drawable/ic_baseline_check_24"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:contentDescription="@string/app_name" />
 
     </RelativeLayout>
 
