save today's work

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,7 +7,7 @@
     android:layout_weight="100"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".AboutActivity">
+    tools:context=".activity.AboutActivity">
 
     <RelativeLayout
         android:id="@+id/toolbar"
