--- a/app/src/main/res/drawable/bg_onclick.xml
+++ b/app/src/main/res/drawable/bg_onclick.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true">
-
+    <item android:state_pressed="true"
+        android:state_focused="true">
         <shape android:shape="rectangle"
             android:innerRadius="10dp">
 
@@ -16,7 +16,8 @@
 
     </item>
 
-    <item>
+    <item android:state_focused="false"
+        android:state_pressed="false">
         <shape android:innerRadius="5dp"
             android:shape="rectangle">
             <gradient android:angle="-90"
