--- a/app/src/main/res/layout/activity_phrase_detail.xml
+++ b/app/src/main/res/layout/activity_phrase_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    tools:context=".PhraseDetailActivity">
+    tools:context=".activity.PhraseDetailActivity">
 
     <RelativeLayout
         android:id="@+id/toolbar"
@@ -26,7 +26,7 @@
             ads:tint="@color/white" />
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/title_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -43,14 +43,26 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerView_detail"
         android:layout_width="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/bg_onclick"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
         android:paddingStart="5dp"
         tools:listitem="@layout/detail_item_list"
         android:paddingEnd="5dp"
         ads:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" />
 
 </RelativeLayout>
