--- a/app/src/main/res/layout/main_item_list.xml
+++ b/app/src/main/res/layout/main_item_list.xml
@@ -2,21 +2,22 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:layout_marginBottom="3dp"
-    android:background="@color/white"
-    android:elevation="2dp"
-    app:cardCornerRadius="2dp"
-    app:cardMaxElevation="5dp">
+    android:layout_height="50dp"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="10dp"
+    android:layout_margin="5dp"
+    app:cardMaxElevation="12dp"
+    app:cardBackgroundColor="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_onclick">
+        android:background="@drawable/bg_onclick"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/linear_item_list"
             android:layout_centerVertical="true"
             android:orientation="vertical">
 
@@ -26,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="30dp"
-                android:ellipsize="marquee"
+                android:ellipsize="end"
                 android:fontFamily="serif"
                 android:gravity="start"
                 android:marqueeRepeatLimit="marquee_forever"
@@ -58,7 +59,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_check_24"
+            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:padding="10dp"
