--- a/app/src/main/res/layout/main_item_list.xml
+++ b/app/src/main/res/layout/main_item_list.xml
@@ -6,13 +6,12 @@
     app:cardElevation="10dp"
     app:cardCornerRadius="10dp"
     android:layout_margin="5dp"
-    app:cardMaxElevation="12dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardMaxElevation="12dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:background="@drawable/bg_onclick"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
