--- a/app/src/main/res/layout/detail_item_list.xml
+++ b/app/src/main/res/layout/detail_item_list.xml
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_toEndOf="@id/image_check"
-        android:padding="5dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:text="@string/app_name"
         android:textColor="@color/black"
         android:textSize="12sp" />
@@ -28,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="10dp"
         android:contentDescription="@string/app_name"
         android:padding="5dp"
         android:src="@drawable/ic_baseline_record_voice_over_24" />
